# compute-horde-facilitator-sdk

./: .cruft.json  .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  test.py
.github/workflows/: cd.yml  ci.yml  publish.yml
changelog.d/: +cookiecutter.infrastructure.md  +signatures.added.md  +submit_job_feedback.added.md  +updated.packages.md  +uploads_volumes.added.md  +wait_for_job.added.md
docs/: sdk_signatures.md
src/compute_horde_facilitator_sdk/: v1.py
src/compute_horde_facilitator_sdk/_internal/: api_models.py  sdk.py  signature.py
tests/: conftest.py
tests/unit/: test_sdk.py  test_signature.py
